before real upload
