# src/modules/admin/admin.routes.js
@@ -24,6 +24,7 @@ const paymentsRoutes = require('./payments/payments.routes');
 const walletsRoutes  = require('./wallets/wallets.routes');
 const sosRoutes      = require('./sos/sos.routes');
 const faqsRoutes     = require('./faqs/faqs.routes');
+const promotionsRoutes = require('./promotions/promotions.routes');
 const regionsRoutes       = require('./regions/regions.routes');
 const servicesRoutes      = require('./services/services.routes');
 const vehicleModelsRoutes = require('./vehicle-models/vehicleModels.routes');
@@ -49,6 +50,7 @@ router.use('/admins', adminsRoutes);
 router.use('/wallets', walletsRoutes);
 router.use('/sos',     sosRoutes);
 router.use('/faqs',    faqsRoutes);
+router.use('/promotions', promotionsRoutes);
 router.use('/regions',        regionsRoutes);
 router.use('/services',       servicesRoutes);
 router.use('/vehicle-models', vehicleModelsRoutes);
